<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.exjobb.emil.test.PayActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/oneView"
            android:src="@drawable/krona"
            android:contentDescription="@string/one"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:id="@+id/fiveView"
            android:src="@drawable/femma"
            android:contentDescription="@string/five"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:id="@+id/tenView"
            android:src="@drawable/tia"
            android:contentDescription="@string/ten"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="89dp"
            android:id="@+id/twentyView"
            android:src="@drawable/sedel20"
            android:contentDescription="@string/twenty"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="103dp"
            android:id="@+id/fiftyView"
            android:src="@drawable/sedel50"
            android:contentDescription="@string/fifty"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="93dp"
            android:id="@+id/hundredView"
            android:src="@drawable/sedel100"
            android:contentDescription="@string/hundred"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#ff628e4f"
        android:layout_toEndOf="@+id/linearLayout"
        android:id="@+id/dropView"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_in"
            android:id="@+id/moneyInView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffffff"
            android:textSize="20dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/toPayView"
        android:layout_above="@+id/dropView"
        android:layout_alignStart="@+id/dropView"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payInstructions"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignEnd="@+id/toPayView"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignStart="@+id/toPayView"
        android:textSize="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_above="@+id/toPayView" />

</RelativeLayout>
